// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`displays data 1`] = `
<div>
  <div
    class="DataTable__Table-sc-1xhkibe-0 lhcMRB"
  >
    <div
      class="DataTable__TableCell-sc-1xhkibe-1 DataTable__TableHeaderCell-sc-1xhkibe-2 kkGvbz"
    >
      Id
    </div>
    <div
      class="DataTable__TableCell-sc-1xhkibe-1 DataTable__TableHeaderCell-sc-1xhkibe-2 kkGvbz"
    >
      Name
    </div>
    <div
      class="DataTable__TableCell-sc-1xhkibe-1 eNzmHX"
    >
      1
    </div>
    <div
      class="DataTable__TableCell-sc-1xhkibe-1 eNzmHX"
    >
      Alice
    </div>
    <div
      class="DataTable__TableCell-sc-1xhkibe-1 eNzmHX"
    >
      2
    </div>
    <div
      class="DataTable__TableCell-sc-1xhkibe-1 eNzmHX"
    >
      Bob
    </div>
    <div
      class="DataTable__TableCell-sc-1xhkibe-1 eNzmHX"
    >
      3
    </div>
    <div
      class="DataTable__TableCell-sc-1xhkibe-1 eNzmHX"
    >
      Charlie
    </div>
  </div>
</div>
`;

exports[`displays no data 1`] = `
<div>
  <div
    class="DataTable__Table-sc-1xhkibe-0 lhcMRB"
  >
    <div
      class="DataTable__TableCell-sc-1xhkibe-1 DataTable__TableHeaderCell-sc-1xhkibe-2 kkGvbz"
    >
      Id
    </div>
    <div
      class="DataTable__TableCell-sc-1xhkibe-1 DataTable__TableHeaderCell-sc-1xhkibe-2 kkGvbz"
    >
      Name
    </div>
  </div>
</div>
`;
